# src/modules/events/invitations/admin/dto/checkin-participant.dto.ts
@@ -1,0 +1,11 @@
+import { IsBoolean } from 'class-validator';
+
+export class AdminCheckinParticipantInputDto {
+  @IsBoolean()
+  checkin: boolean;
+}
+
+export class AdminCheckinParticipantOutputDto {
+  id: string;
+  checkedInAt: Date | null;
+}
