# src/shared/database/entities/participant.entity.ts
@@ -35,6 +35,9 @@ export class ParticipantEntity {
   @Column({ type: 'varchar', nullable: true })
   dietaryRestrictionDescription: string | null;
 
+  @Column({ type: 'timestamp', nullable: true })
+  checkedInAt: Date | null;
+
   @CreateDateColumn()
   createdAt: Date;
 
